Fix java8 build